bugfix: dob label hidden behind input

--- a/src/components/InputDob/style.scss
+++ b/src/components/InputDob/style.scss
@@ -14,6 +14,7 @@ fieldset.dob {
     top: 10px;
     left: 16px;
     font-size: 12px;
+    z-index: 1;
   }
 
   input {
